k8s/recipes-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipes-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recipes-service
  template:
    metadata:
      labels:
        app: recipes-service
    spec:
      containers:
        - name: recipes-service
          image: efrei2023/recipes-service:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: recipes-service
  labels:
    app: recipes-service
spec:
  type: ClusterIP  # ClusterIP pour la stabilité
  selector:
    app: recipes-service
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002
