k8s/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-service
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
        - name: users-service
          image: efrei2023/users-service:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: users-service
  labels:
    app: users-service
spec:
  type: ClusterIP  # Utilisation de ClusterIP pour stabiliser les connexions internes
  selector:
    app: users-service
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
